--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,5 @@ version = "0.5"
 dependencies = [
 ]
 
-[options]
-packages = find:
+[tool.setuptools.packages]
+find = {}  # Scan the project directory with the default parameters
