--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
-[project]
+[metadata]
 name = "zoedepth"
 version = "0.5"
 dependencies = [
